test/resources/parser/failing/testSeqSemi2.scala
object MissingSemicolon {
  val x: Int = 1
  val y: Int = 2
  x + y
}